--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2231,6 +2231,9 @@
     <ClCompile Include="UVa\600\636.cpp">
       <Filter>UVaOJ\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10077.cpp">
+      <Filter>UVaOJ\10000\10070</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
