--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -2222,6 +2222,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10408.cpp" />
     <ClCompile Include="UVa\10400\10432.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -2713,6 +2714,7 @@
     <ClInclude Include="Library\double.h" />
     <ClInclude Include="Library\dp_algs.h" />
     <ClInclude Include="Library\eularian.h" />
+    <ClInclude Include="Library\fraction.h" />
     <ClInclude Include="Library\graham.h" />
     <ClInclude Include="Library\graph.h" />
     <ClInclude Include="Library\graph_util.h" />
