--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2267,6 +2267,9 @@
     <ClCompile Include="UVa\10400\10407.cpp">
       <Filter>UVaOJ\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10090.cpp">
+      <Filter>UVaOJ\10000\10090</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
