--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2273,6 +2273,9 @@
     <ClCompile Include="UVa\200\270.cpp">
       <Filter>UVaOJ\200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\332.cpp">
+      <Filter>UVaOJ\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
